add: fragments and the adapter for view pager
add FollowersFragment and FollowingFragment for the view pager and SectionPagerAdapter to control the view of the view pager

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="app_grey">#3c3f41</color>
+    <color name="app_grey_700">#242627</color>
+    <color name="light_grey">#AEAEAE</color>
 </resources>
